edited story name UI icons -> UI icon as it conflicts with object name

--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -34,7 +34,7 @@ Todo list
 ## Basic Stroke Icon
 
 <Preview>
-  <Story name="UI icons">
+  <Story name="UI icon">
     {{
       components: {
         ChecIcon
