--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -15,7 +15,7 @@ const colors = {
   orange600: 'text-orange-600',
 }
 
-<Meta title="Components/Icon" component={ChecIcon} />
+<Meta title="Components/Icon" component={ ChecIcon } />
 
 <details>
 <summary>
@@ -27,7 +27,7 @@ Todo list
 
 #### There are  main groups of icons: UI, Navigation, Marketing
 - UI icons are standard stroke icons utilized throughout product interface
-    - Sizes are customized using inline class attributes `w-3 h-3` and `w-4 h-4`
+    - Sizes are customized using inline class attributes `w-3 h-3` for 12px and `w-4 h-4` for 16px
 
 <Props of={ ChecIcon } />
 
@@ -49,7 +49,7 @@ Todo list
       },
       template: `
         <div class="py-16 flex justify-center bg-gray-200">
-          <chec-icon :icon="icon" class="w-4 h-4" :class="color" />
+          <chec-icon :icon="icon" class="w-3 h-3" :class="color" />
         </div>`,
     }}
   </Story>
@@ -73,7 +73,7 @@ Todo list
       },
       template: `
         <div class="py-16 flex justify-center bg-gray-200">
-          <chec-icon v-for="(_, icon) in icons" :icon="icon" class="w-4 h-4" :class="color" v-tooltip.top="icon"/>
+          <chec-icon v-for="(_, icon) in icons" :icon="icon" class="w-3 h-3" :class="color" v-tooltip.top="icon"/>
         </div>`,
     }}
   </Story>
