make popover half of screen with scrollable overflow

--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -151,8 +151,8 @@ Todo list
       template: `
           <ChecModal
             width="xl"
-            class="w-full h-full relative overflow-scroll"
-            innerClass="bg-gray-100 overflow-scroll"
+            class="w-full h-full relative"
+            innerClass="bg-gray-100"
           > 
             <div>
               <h2 class="mb-4">Event(s)</h2>
