--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -4,7 +4,8 @@ import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs
 import { withInfo } from 'storybook-addon-vue-info'
 import ChecIcon from '../../components/ChecIcon.vue';
 import ChecMarketingIcon from '../../components/ChecMarketingIcon.vue';
-import { uiIcons, mIcons } from '../../lib/icons';
+import ChecNavIcon from '../../components/ChecNavIcon.vue';
+import { uiIcons, navIcons, mIcons } from '../../lib/icons';
 const colors = {
   blue: 'text-primary-blue',
   gray: 'text-gray-500',
@@ -31,7 +32,9 @@ Todo list
 - UI icons are standard stroke icons utilized throughout product interface
     - Sizes are customized using inline class attributes `w-3 h-3` for 12px and `w-4 h-4` for 16px
 
-- Marketing icons are utilize on marketing site and product dashboard
+- Navigation icons are used in the dashboard navigation bar. Default size is `w-6 h-6` for 24px
+
+- Marketing icons are utilized on marketing site and product dashboard
     - Two sets of icons: 32px & 80px
 
 <Props of={ ChecIcon } />
@@ -83,6 +86,28 @@ Todo list
     }}
   </Story>
 </Preview>
+
+## Navigation icon
+
+<Preview>
+  <Story name="Navigation icons">
+    {{
+      components: {
+        ChecNavIcon
+      },
+      props: {
+        icon: {
+          default: select('Icon', Object.keys(navIcons), 'orders')
+        },
+      },
+      template: `
+        <div class="py-16 flex justify-center bg-gray-100">
+          <chec-nav-icon :icon="icon" class="w-6 h-6"/>
+        </div>`,
+    }}
+  </Story>
+</Preview>
+
 
 ## Marketing icon
 
