--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -3,8 +3,9 @@ import { action } from "@storybook/addon-actions";
 import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs';
 import { withInfo } from 'storybook-addon-vue-info'
 import ChecIcon from '../../components/ChecIcon.vue';
+import ChecNavIcon from '../../components/ChecNavIcon.vue';
 import ChecMarketingIcon from '../../components/ChecMarketingIcon.vue';
-import { uiIcons, mIcons } from '../../lib/icons';
+import { uiIcons, navIcons, mIcons } from '../../lib/icons';
 const colors = {
   blue: 'text-primary-blue',
   gray: 'text-gray-500',
@@ -17,13 +18,6 @@ const colors = {
 }
 
 <Meta title="Components/Icon" component={ ChecIcon } />
-
-<details>
-<summary>
-Todo list
-- Add dashboard navigation icons once finalized
-</summary>
-</details>
 
 # Icon
 
@@ -79,6 +73,25 @@ Todo list
       template: `
         <div class="py-16 flex justify-center bg-gray-200">
           <chec-icon v-for="(_, icon) in icons" :icon="icon" class="w-3 h-3" :class="color" v-tooltip.top="icon"/>
+        </div>`,
+    }}
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Navigation icons">
+    {{
+      components: {
+        ChecNavIcon
+      },
+      props: {
+        icon: {
+          default: select('Icon', Object.keys(navIcons), 'orders')
+        },
+      },
+      template: `
+        <div class="py-16 flex justify-center bg-gray-100">
+          <chec-nav-icon :icon="icon" class="w-6 h-6"/>
         </div>`,
     }}
   </Story>
