add placeholder to popping out dropdown story

--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -166,6 +166,7 @@ Todo list
               <BaseDropdown
                 v-model="events"
                 name="example-dropdown"
+                placeholder="Example Dropdown Placeholder"
                 :options="options"
                 multiselect
               />
