Create pagination category
Co-Authored-By: Guy Marriott <guy@chec.io>

--- a/src/stories/components/ChecPaginate.stories.mdx
+++ b/src/stories/components/ChecPaginate.stories.mdx
@@ -3,7 +3,7 @@ import { action } from "@storybook/addon-actions";
 import { number, select, boolean } from '@storybook/addon-knobs';
 import ChecPaginate from '../../components/ChecPaginate.vue';
 
-<Meta title="Components/Tabs" component={ChecPaginate} />
+<Meta title="Components/Pagination" component={ChecPaginate} />
 
 # Pagination
 
