Add tailwind classes mixin and reduce default padding in card to p-4

--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -40,7 +40,7 @@ import TextField from '../../components/TextField.vue';
         <div class="p-16 flex justify-center w-full font-lato">
           <ChecCard
             class="w-full max-w-lg"
-            innerClass="bg-gray-100"
+            tailwind="bg-gray-100"
           >
             <span class="block text-lg text-gray-500 font-bold mb-4">
               Update payment method
