Change mIcon's plusname property to 'plus' - following pattern of plan property names within mIcon - apply width and height to <ChecMarketingIcon> in Marketing Icons story

--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -112,7 +112,7 @@ const colors = {
       },
       template: `
         <div class="py-16 flex justify-center bg-white">
-          <chec-marketing-icon :icon="icon" />
+          <chec-marketing-icon :icon="icon" class="w-8 h-8" />
         </div>`,
     }}
   </Story>
