- add slug variation of chec-data-pill

--- a/src/stories/components/ChecDataPill.stories.mdx
+++ b/src/stories/components/ChecDataPill.stories.mdx
@@ -20,6 +20,7 @@ import ChecDataPill from '../../components/ChecDataPill';
           <ChecDataPill variant="news">News</ChecDataPill>
           <ChecDataPill variant="new">New</ChecDataPill>
           <ChecDataPill variant="updated">Updated</ChecDataPill>
+          <ChecDataPill variant="slug">Slug</ChecDataPill>
         </div>`
     }}
   </Story>
