Loading indicator no longer has any status text by default

--- a/src/stories/components/ChecLoading.stories.mdx
+++ b/src/stories/components/ChecLoading.stories.mdx
@@ -18,7 +18,7 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
       },
       props: {
         message: {
-          default: text('Message', 'Loading...'),
+          default: text('Message', ''),
         },
       },
       template: `
