- create switch input component? - abstract unique id method from checkbox to reuse in switch
Update src/stories/components/ChecCheckbox.stories.mdx

Co-Authored-By: Guy Marriott <guy@chec.io>

Update src/components/ChecSwitch.vue

Co-Authored-By: Guy Marriott <guy@chec.io>

--- a/src/stories/components/ChecCheckbox.stories.mdx
+++ b/src/stories/components/ChecCheckbox.stories.mdx
@@ -36,7 +36,7 @@ import ChecCheckbox from '../../components/ChecCheckbox.vue';
             name="apple"
             :label="label"
             value="apple"
-            checked=true
+            checked
             :disabled="disabled"
           />
           <ChecCheckbox
