--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -28,6 +28,37 @@ import TextField from '../../components/TextField.vue';
   </Story>
 </Preview>
 
+<Preview>
+  <Story name="Borderless">
+    {{
+      components: {
+        ChecCard,
+      },
+      template: `
+        <div class="p-16 flex justify-center w-full bg-gray-100">
+          <ChecCard :variant="'borderless'" class="w-40 h-40">
+            <p class="self-center mx-auto">Nothing here</p>
+          </ChecCard>
+        </div>`
+    }}
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Border Top & Bottom">
+    {{
+      components: {
+        ChecCard,
+      },
+      template: `
+        <div class="p-16 flex justify-center w-full bg-gray-100">
+          <ChecCard :variant="'border-vertical'" class="w-40 h-40">
+            <p class="self-center mx-auto">Nothing here</p>
+          </ChecCard>
+        </div>`
+    }}
+  </Story>
+</Preview>
 
 <Preview>
   <Story name="With inner elements">
