--- a/src/stories/components/BaseDropdown.stories.mdx
+++ b/src/stories/components/BaseDropdown.stories.mdx
@@ -129,11 +129,17 @@ Todo list
           onClick,
         }
       },
+      props: {
+        label: {
+          default: text('Label', 'Label'),
+        },
+      },
       template: `
         <div class="my-8 p-16 bg-gray-100 text-center">
           <BaseDropdown
             name="example-4"
             class="max-w-md mx-auto"
+            :label="label"
             placeholder="Example Dropdown Placeholder"
             v-model="selected"
             :options="options"
