updating select box floating label, adding placeholder logic as per material design philosophy

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -41,6 +41,7 @@ import TextField from '../../components/TextField.vue';
         <div class="py-16 flex justify-center">
           <TextField
             :label="label"
+            placeholder="Example Placeholder"
             v-model="inputValue"
             :variant="variant"
           />
