--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -61,6 +61,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            label="label"
             placeholder="Text Field Placeholder"
             variant="disabled"
           />
@@ -85,6 +86,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            label="label"
             class="w-full max-w-sm"
             placeholder="Text Field Placeholder"
             variant="error"
@@ -111,6 +113,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            label="label"
             placeholder="Enter your password"
             type="password"
           />
