--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -17,7 +17,7 @@ import TextField from '../../components/TextField.vue';
     {{
       props: {
         inputValue: {
-          default: text('Input Value', 'Text Field')
+          default: text('Input Value', '')
         },
         errored: {
           default: boolean('Errored', false)
@@ -58,10 +58,15 @@ import TextField from '../../components/TextField.vue';
       components: {
         TextField
       },
+      props: {
+        label: {
+          default: text('Label', 'Label')
+        },
+      },
       template: `
         <div class="py-16 flex justify-center">
           <TextField
-            label="label"
+            :label="label"
             placeholder="Text Field Placeholder"
             variant="disabled"
           />
@@ -77,7 +82,10 @@ import TextField from '../../components/TextField.vue';
     {{
       props: {
         inputValue: {
-          default: text('Input Value', 'Text Field')
+          default: text('Input Value', '')
+        },
+        label: {
+          default: text('Label', 'Label')
         },
       },
       components: {
@@ -86,7 +94,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
-            label="label"
+            :label="label"
             class="w-full max-w-sm"
             placeholder="Text Field Placeholder"
             variant="error"
@@ -104,7 +112,10 @@ import TextField from '../../components/TextField.vue';
     {{
       props: {
         inputValue: {
-          default: text('Input Value', 'Text Field')
+          default: text('Input Value', '')
+        },
+        label: {
+          default: text('Label', 'Label')
         },
       },
       components: {
@@ -113,7 +124,8 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
-            label="label"
+            :label="label"
+            v-model="inputValue"
             placeholder="Enter your password"
             type="password"
           />
