- check if $attrs.type to choose whether to apply show password toggling functionality - add method to make template more declarative
allow name of hidden field on button to be configurable,
add knob for hidden field prop

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -168,6 +168,9 @@ import TextField from '../../components/TextField.vue';
         label: {
           default: text('Input Value', 'Password'),
         },
+        hiddenField: {
+          default: text('Name of hidden field', 'password'),
+        },
       },
       components: {
         TextField
@@ -180,7 +183,7 @@ import TextField from '../../components/TextField.vue';
             v-model="inputValue"
             placeholder="Enter your password"
             v-model="inputValue"
-            :withShowPassword="withShowPassword"
+            :hiddenField="hiddenField"
             type="password"
           />
         </div>`,
