--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -44,6 +44,7 @@ import TextField from '../../components/TextField.vue';
             placeholder="Example Placeholder"
             v-model="inputValue"
             :variant="variant"
+            class="w-full max-w-sm"
           />
         </div>`,
     }}
@@ -66,6 +67,7 @@ import TextField from '../../components/TextField.vue';
       template: `
         <div class="py-16 flex justify-center">
           <TextField
+            class="w-full max-w-sm"
             :label="label"
             placeholder="Text Field Placeholder"
             variant="disabled"
@@ -125,6 +127,7 @@ import TextField from '../../components/TextField.vue';
         <div class="py-16 flex justify-center">
           <TextField
             :label="label"
+            class="w-full max-w-sm"
             v-model="inputValue"
             placeholder="Enter your password"
             type="password"
