pass down name attribute to text-field's inner input

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -179,6 +179,7 @@ import TextField from '../../components/TextField.vue';
         <div class="py-16 flex justify-center max-w-sm mx-auto">
           <form class="w-full">
             <TextField
+              name="Password"
               :label="label"
               placeholder="Enter your password"
               v-model="inputValue"
