fix text-field password story

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -163,10 +163,10 @@ import TextField from '../../components/TextField.vue';
     {{
       props: {
         inputValue: {
-          default: text('Input Value', '')
+          default: text('Input Value', 'password123')
         },
         label: {
-          default: text('Input Value', 'Password'),
+          default: text('Label', 'Password'),
         },
         hiddenField: {
           default: text('Name of hidden field', 'password'),
